Celestial/Compiler/CelestialParser.py
# Generated from .\Compiler\CelestialParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CelestialParser ( Parser ):

    grammarFileName = "CelestialParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'address'", "'bool'", "'enum'", "'event'", 
                     "'eventlog'", "'uint'", "'uint8'", "'inst_map'", "'int'", 
                     "'string'", "'contract'", "'mapping'", "'bytes'", "'bytes20'", 
                     "'bytes32'", "'add'", "'as'", "'assert'", "'balance'", 
                     "'block.coinbase'", "'block.difficulty'", "'block.gaslimit'", 
                     "'block.number'", "'block.timestamp'", "'call'", "'call_bool'", 
                     "'call_uint'", "'constant'", "'constructor'", "'contains'", 
                     "'credit'", "'debit'", "'default'", "'delete'", "'else'", 
                     "'emit'", "'eTransfer'", "'exists'", "'fallback'", 
                     "'for'", "'forall'", "'from'", "'function'", "'if'", 
                     "'import'", "'in'", "'int_min'", "'int_max'", "'ite'", 
                     "'invariant'", "'keys'", "'lemma'", "'length'", "'log'", 
                     "'modifies'", "'modifies_addresses'", "'new'", "'payable'", 
                     "'pop'", "'post'", "'pragma'", "'pre'", "'print'", 
                     "'private'", "'public'", "'pure'", "'push'", "'receive'", 
                     "'return'", "'returns'", "'revert'", "'r_reverts'", 
                     "'safe_add'", "'safe_div'", "'safe_mod'", "'safe_mul'", 
                     "'safe_sub'", "'send'", "'sender'", "'spec'", "'struct'", 
                     "'this'", "'transfer'", "'tx_reverts'", "'tx.gasprice'", 
                     "'tx.origin'", "'uint_max'", "'using'", "'value'", 
                     "'view'", "<INVALID>", "<INVALID>", "'null'", "<INVALID>", 
                     "<INVALID>", "'!'", "'&&'", "'||'", "'=>'", "'==>'", 
                     "'<==>'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'->'", "'='", "'+='", "'-='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'^'", "'~'", "'{'", "'}'", "'['", "']'", 
                     "'('", "')'", "';'", "','", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "ADDR", "BOOL", "ENUM", "EVENT", "EVENTLOG", 
                      "UINT", "UINT8", "INSTMAP", "INT", "STRING", "CONTRACT", 
                      "MAP", "BYTES", "BYTES20", "BYTES32", "ADD", "AS", 
                      "ASSERT", "BALANCE", "BCOINBASE", "BDIFF", "BGASLIMIT", 
                      "BNUMBER", "BTIMESTAMP", "CALL", "CALLBOOL", "CALLUINT", 
                      "CONSTANT", "CONSTR", "CONTAINS", "CREDIT", "DEBIT", 
                      "DEFAULT", "DELETE", "ELSE", "EMIT", "ETRANSFER", 
                      "EXISTS", "FALLBACK", "FOR", "FORALL", "FROM", "FUNCTION", 
                      "IF", "IMPORT", "IN", "INT_MIN", "INT_MAX", "ITE", 
                      "INVARIANT", "KEYS", "LEMMA", "LENGTH", "LOG", "MODIFIES", 
                      "MODIFIESA", "NEW", "PAYABLE", "POP", "POST", "PRAGMA", 
                      "PRE", "PRINT", "PRIVATE", "PUBLIC", "PURE", "PUSH", 
                      "RECEIVE", "RETURN", "RETURNS", "REVERT", "RREVERTS", 
                      "SAFEADD", "SAFEDIV", "SAFEMOD", "SAFEMUL", "SAFESUB", 
                      "SEND", "SENDER", "SPEC", "STRUCT", "THIS", "TRANSFER", 
                      "TXREVERTS", "TXGASPRICE", "TXORIGIN", "UINT_MAX", 
                      "USING", "VALUE", "VIEW", "BoolLiteral", "IntLiteral", 
                      "NullLiteral", "StringLiteral", "VersionLiteral", 
                      "LNOT", "LAND", "LOR", "MAPUPD", "IMPL", "BIMPL", 
                      "EQ", "NE", "LE", "GE", "LT", "GT", "RARROW", "ASSIGN", 
                      "INSERT", "REMOVE", "PLUS", "SUB", "MUL", "DIV", "MOD", 
                      "CARET", "BNOT", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "LPAREN", "RPAREN", "SEMI", "COMMA", "DOT", "COLON", 
                      "Iden", "Whitespace", "BlockComment", "LineComment" ]

    RULE_program = 0
    RULE_pragmaDirective = 1
    RULE_pragmaValue = 2
    RULE_version = 3
    RULE_versionConstraint = 4
    RULE_versionOperator = 5
    RULE_importDirective = 6
    RULE_importDeclaration = 7
    RULE_iden = 8
    RULE_datatype = 9
    RULE_idenTypeList = 10
    RULE_idenType = 11
    RULE_contractDecl = 12
    RULE_contractBody = 13
    RULE_contractContents = 14
    RULE_enumDecl = 15
    RULE_structDecl = 16
    RULE_funDecl = 17
    RULE_funParamList = 18
    RULE_funParam = 19
    RULE_functionBody = 20
    RULE_invariantDecl = 21
    RULE_invariantBody = 22
    RULE_eventDecl = 23
    RULE_constructorDecl = 24
    RULE_spec = 25
    RULE_stateMutability = 26
    RULE_methodDecl = 27
    RULE_methodParamList = 28
    RULE_methodParam = 29
    RULE_methodBody = 30
    RULE_returnStatement = 31
    RULE_varDecl = 32
    RULE_usingForDecl = 33
    RULE_loopVarDecl = 34
    RULE_statement = 35
    RULE_elseStatement = 36
    RULE_lvalue = 37
    RULE_logcheck = 38
    RULE_expr = 39
    RULE_primitive = 40
    RULE_unnamedTupleBody = 41
    RULE_namedTupleBody = 42
    RULE_rvalueList = 43
    RULE_rvalue = 44

    ruleNames =  [ "program", "pragmaDirective", "pragmaValue", "version", 
                   "versionConstraint", "versionOperator", "importDirective", 
                   "importDeclaration", "iden", "datatype", "idenTypeList", 
                   "idenType", "contractDecl", "contractBody", "contractContents", 
                   "enumDecl", "structDecl", "funDecl", "funParamList", 
                   "funParam", "functionBody", "invariantDecl", "invariantBody", 
                   "eventDecl", "constructorDecl", "spec", "stateMutability", 
                   "methodDecl", "methodParamList", "methodParam", "methodBody", 
                   "returnStatement", "varDecl", "usingForDecl", "loopVarDecl", 
                   "statement", "elseStatement", "lvalue", "logcheck", "expr", 
                   "primitive", "unnamedTupleBody", "namedTupleBody", "rvalueList", 
                   "rvalue" ]

    EOF = Token.EOF
    ADDR=1
    BOOL=2
    ENUM=3
    EVENT=4
    EVENTLOG=5
    UINT=6
    UINT8=7
    INSTMAP=8
    INT=9
    STRING=10
    CONTRACT=11
    MAP=12
    BYTES=13
    BYTES20=14
    BYTES32=15
    ADD=16
    AS=17
    ASSERT=18
    BALANCE=19
    BCOINBASE=20
    BDIFF=21
    BGASLIMIT=22
    BNUMBER=23
    BTIMESTAMP=24
    CALL=25
    CALLBOOL=26
    CALLUINT=27
    CONSTANT=28
    CONSTR=29
    CONTAINS=30
    CREDIT=31
    DEBIT=32
    DEFAULT=33
    DELETE=34
    ELSE=35
    EMIT=36
    ETRANSFER=37
    EXISTS=38
    FALLBACK=39
    FOR=40
    FORALL=41
    FROM=42
    FUNCTION=43
    IF=44
    IMPORT=45
    IN=46
    INT_MIN=47
    INT_MAX=48
    ITE=49
    INVARIANT=50
    KEYS=51
    LEMMA=52
    LENGTH=53
    LOG=54
    MODIFIES=55
    MODIFIESA=56
    NEW=57
    PAYABLE=58
    POP=59
    POST=60
    PRAGMA=61
    PRE=62
    PRINT=63
    PRIVATE=64
    PUBLIC=65
    PURE=66
    PUSH=67
    RECEIVE=68
    RETURN=69
    RETURNS=70
    REVERT=71
    RREVERTS=72
    SAFEADD=73
    SAFEDIV=74
    SAFEMOD=75
    SAFEMUL=76
    SAFESUB=77
    SEND=78
    SENDER=79
    SPEC=80
    STRUCT=81
    THIS=82
    TRANSFER=83
    TXREVERTS=84
    TXGASPRICE=85
    TXORIGIN=86
    UINT_MAX=87
    USING=88
    VALUE=89
    VIEW=90
    BoolLiteral=91
    IntLiteral=92
    NullLiteral=93
    StringLiteral=94
    VersionLiteral=95
    LNOT=96
    LAND=97
    LOR=98
    MAPUPD=99
    IMPL=100
    BIMPL=101
    EQ=102
    NE=103
    LE=104
    GE=105
    LT=106
    GT=107
    RARROW=108
    ASSIGN=109
    INSERT=110
    REMOVE=111
    PLUS=112
    SUB=113
    MUL=114
    DIV=115
    MOD=116
    CARET=117
    BNOT=118
    LBRACE=119
    RBRACE=120
    LBRACK=121
    RBRACK=122
    LPAREN=123
    RPAREN=124
    SEMI=125
    COMMA=126
    DOT=127
    COLON=128
    Iden=129
    Whitespace=130
    BlockComment=131
    LineComment=132

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CelestialParser.EOF, 0)

        def contractDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.ContractDeclContext)
            else:
                return self.getTypedRuleContext(CelestialParser.ContractDeclContext,i)


        def pragmaDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.PragmaDirectiveContext)
            else:
                return self.getTypedRuleContext(CelestialParser.PragmaDirectiveContext,i)


        def importDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.ImportDirectiveContext)
            else:
                return self.getTypedRuleContext(CelestialParser.ImportDirectiveContext,i)


        def getRuleIndex(self):
            return CelestialParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CelestialParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CelestialParser.CONTRACT) | (1 << CelestialParser.IMPORT) | (1 << CelestialParser.PRAGMA))) != 0):
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CelestialParser.CONTRACT]:
                    self.state = 90
                    self.contractDecl()
                    pass
                elif token in [CelestialParser.PRAGMA]:
                    self.state = 91
                    self.pragmaDirective()
                    pass
                elif token in [CelestialParser.IMPORT]:
                    self.state = 92
                    self.importDirective()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(CelestialParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaDirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pragmaName = None # IdenContext

        def PRAGMA(self):
            return self.getToken(CelestialParser.PRAGMA, 0)

        def pragmaValue(self):
            return self.getTypedRuleContext(CelestialParser.PragmaValueContext,0)


        def SEMI(self):
            return self.getToken(CelestialParser.SEMI, 0)

        def iden(self):
            return self.getTypedRuleContext(CelestialParser.IdenContext,0)


        def getRuleIndex(self):
            return CelestialParser.RULE_pragmaDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaDirective" ):
                listener.enterPragmaDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaDirective" ):
                listener.exitPragmaDirective(self)




    def pragmaDirective(self):

        localctx = CelestialParser.PragmaDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pragmaDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(CelestialParser.PRAGMA)
            self.state = 101
            localctx.pragmaName = self.iden()
            self.state = 102
            self.pragmaValue()
            self.state = 103
            self.match(CelestialParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(CelestialParser.VersionContext,0)


        def expr(self):
            return self.getTypedRuleContext(CelestialParser.ExprContext,0)


        def getRuleIndex(self):
            return CelestialParser.RULE_pragmaValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaValue" ):
                listener.enterPragmaValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaValue" ):
                listener.exitPragmaValue(self)




    def pragmaValue(self):

        localctx = CelestialParser.PragmaValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pragmaValue)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CelestialParser.VersionLiteral, CelestialParser.LE, CelestialParser.GE, CelestialParser.LT, CelestialParser.GT, CelestialParser.ASSIGN, CelestialParser.CARET, CelestialParser.BNOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.version()
                pass
            elif token in [CelestialParser.ADDR, CelestialParser.BALANCE, CelestialParser.BCOINBASE, CelestialParser.BDIFF, CelestialParser.BGASLIMIT, CelestialParser.BNUMBER, CelestialParser.BTIMESTAMP, CelestialParser.DEFAULT, CelestialParser.EXISTS, CelestialParser.FORALL, CelestialParser.INT_MIN, CelestialParser.INT_MAX, CelestialParser.ITE, CelestialParser.LOG, CelestialParser.NEW, CelestialParser.PAYABLE, CelestialParser.SAFEADD, CelestialParser.SAFEDIV, CelestialParser.SAFEMOD, CelestialParser.SAFEMUL, CelestialParser.SAFESUB, CelestialParser.SENDER, CelestialParser.THIS, CelestialParser.TXGASPRICE, CelestialParser.TXORIGIN, CelestialParser.UINT_MAX, CelestialParser.VALUE, CelestialParser.BoolLiteral, CelestialParser.IntLiteral, CelestialParser.NullLiteral, CelestialParser.StringLiteral, CelestialParser.LNOT, CelestialParser.SUB, CelestialParser.LPAREN, CelestialParser.Iden]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def versionConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.VersionConstraintContext)
            else:
                return self.getTypedRuleContext(CelestialParser.VersionConstraintContext,i)


        def getRuleIndex(self):
            return CelestialParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = CelestialParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.versionConstraint()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 95)) & ~0x3f) == 0 and ((1 << (_la - 95)) & ((1 << (CelestialParser.VersionLiteral - 95)) | (1 << (CelestialParser.LE - 95)) | (1 << (CelestialParser.GE - 95)) | (1 << (CelestialParser.LT - 95)) | (1 << (CelestialParser.GT - 95)) | (1 << (CelestialParser.ASSIGN - 95)) | (1 << (CelestialParser.CARET - 95)) | (1 << (CelestialParser.BNOT - 95)))) != 0):
                self.state = 110
                self.versionConstraint()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VersionLiteral(self):
            return self.getToken(CelestialParser.VersionLiteral, 0)

        def versionOperator(self):
            return self.getTypedRuleContext(CelestialParser.VersionOperatorContext,0)


        def getRuleIndex(self):
            return CelestialParser.RULE_versionConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersionConstraint" ):
                listener.enterVersionConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersionConstraint" ):
                listener.exitVersionConstraint(self)




    def versionConstraint(self):

        localctx = CelestialParser.VersionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_versionConstraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 104)) & ~0x3f) == 0 and ((1 << (_la - 104)) & ((1 << (CelestialParser.LE - 104)) | (1 << (CelestialParser.GE - 104)) | (1 << (CelestialParser.LT - 104)) | (1 << (CelestialParser.GT - 104)) | (1 << (CelestialParser.ASSIGN - 104)) | (1 << (CelestialParser.CARET - 104)) | (1 << (CelestialParser.BNOT - 104)))) != 0):
                self.state = 113
                self.versionOperator()


            self.state = 116
            self.match(CelestialParser.VersionLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARET(self):
            return self.getToken(CelestialParser.CARET, 0)

        def BNOT(self):
            return self.getToken(CelestialParser.BNOT, 0)

        def GE(self):
            return self.getToken(CelestialParser.GE, 0)

        def GT(self):
            return self.getToken(CelestialParser.GT, 0)

        def LT(self):
            return self.getToken(CelestialParser.LT, 0)

        def LE(self):
            return self.getToken(CelestialParser.LE, 0)

        def ASSIGN(self):
            return self.getToken(CelestialParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CelestialParser.RULE_versionOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersionOperator" ):
                listener.enterVersionOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersionOperator" ):
                listener.exitVersionOperator(self)




    def versionOperator(self):
